ami: include szerezet modositas. A netsocket.h, debug.h es haverjai nem symlinkelve, hanem Makefilen keresztul -I -vel includeolva kerulnek forditasra. Ez igy letisztultabb szerkezetet ad, de meg mindig nem a legjobb megoldas.

--- a/ami/Makefile
+++ b/ami/Makefile
@@ -1,9 +1,9 @@
 CC = gcc
 # Wall-t visszakapcsolni!
-CFLAGS = -ggdb
+CFLAGS = -ggdb -I../libc-jss
 
 LIBS = -lev -lm
-OBJ=test_ami.o ami.o netsocket.o
+OBJ=test_ami.o ami.o ../libc-jss/netsocket.o
 BIN=test_ami
 
 all: compile
