--- a/ami/Makefile
+++ b/ami/Makefile
@@ -3,15 +3,14 @@ CC = gcc
 CFLAGS = -ggdb -I../libc-jss
 
 LIBS = -lev -lm
-OBJ=test_ami.o ami.o ../libc-jss/netsocket.o ../libc-jss/logger.o ../libc-jss/misc.o
-BIN=test_ami
+OBJ=ami.o ../libc-jss/netsocket.o ../libc-jss/logger.o ../libc-jss/misc.o
 
 all: clean compile
 
-compile: $(OBJ)
-	$(CC) $(CFLAGS) -o $(BIN) $(OBJ) $(LIBS)
+compile: $(OBJ) test_ami.o calltrack.o
+	$(CC) $(CFLAGS) -o test_ami test_ami.o $(OBJ) $(LIBS)
+	$(CC) $(CFLAGS) -o calltrack calltrack.o $(OBJ) $(LIBS)
 
 clean:
-	rm -rf $(OBJ) $(BIN) core
-
+	rm -rf $(OBJ) test_ami.o calltrack.o test_ami calltrack core
 
