--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libc-jss"]
 	path = libc-jss
-	url = ssh://git@git.jss.hu:44423/libc-jss.git
+	url = git://github.com/andrewjsi/libc-jss
